# astribot_data_quality

./: .gitignore  CHANGELOG_2026-07-14.md  DELIVERY.md  README.md  batch_validate.py  data-quality-code-review-701-2026-07-14.md  demo_report.csv  demo_report.json  pyproject.toml  requirements.txt
astribot_dq/: __init__.py  cli.py  config.py  constant.py  file_path.py  invalid_data_db.py  logger.py  read_hdf5.py  schemas.py  validator.py
config/: validation_config.yaml
docs/: batch_validation_guide.md  fk_service_setup.md  validate_hdf5_guide.md  validation_strategy.md
scripts/: log_statistics.py
tests/: test_smoke.py
